# xmldiff

./: Cargo.toml
src/: app.rs  diff.rs  main.rs
tests/: books.xml  newbooks.xml
