[package]
name = "xmldiff"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# xmltree = "*"
treexml = "0.7.0"
structopt = "0.3.21"
eframe = "0.13.1" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }
anyhow = "1.0.40"


[features]
default = []
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]

[profile.dev]
debug = false
incremental = true

[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]